[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/spritesheets/eagle-attack.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Eagle.gd" type="Script" id=2]
[ext_resource path="res://Assets/spritesheets/enemy-deadth.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 41 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "Stomped",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Flying",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12.5, 8.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 11, 2.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 9 )

[node name="Eagle" type="KinematicBody2D" groups=["Eagle"]]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
frames = SubResource( 5 )
animation = "Flying"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 5.5 )
shape = SubResource( 6 )

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -3, -6.5 )
shape = SubResource( 7 )

[node name="attack_check" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_check"]
position = Vector2( -3, 8 )
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="attack_check" to="." method="_on_attack_check_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
